# GlGame

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  imgui.ini  index.html  run.sh  setup-vcpkg.ps1  setup-vcpkg.sh  vcpkg.json
.cache/clangd/index/: glad.h.B6481BFF154DD754.idx  khrplatform.h.44B3C543B51BA7AB.idx  main.cpp.006E64446A9389E2.idx
GlCraft/: CMakeLists.txt
GlCraft/include/: assetdir.hpp  shader.hpp  types.hpp
GlCraft/lib/: CMakeLists.txt  shader.cpp
GlCraft/src/: assetdir.cpp  main.cpp  shader.cpp
GlCraft/tests/: CMakeLists.txt  test.cpp
data/models/cube/: scene.gltf
data/models/floor/: scene.gltf
data/models/portal/: scene.gltf
data/models/portalFrame/: scene.gltf
data/shaders/: light.frag  light.vert  simple.frag  simple.vert  singleColor.frag  singleColor.vert
data/shaders/gles/: simple.frag  simple.vert
include/: assetdir.hpp  camera.hpp  game.hpp  model.hpp  physics.hpp  portal.hpp  shader.hpp  types.hpp
src/: CMakeLists.txt  assetdir.cpp  camera.cpp  game.cpp  main.cpp  model.cpp  physics.cpp  portal.cpp  shader.cpp
src/include/: assetdir.hpp  types.hpp
